[package]
name = "pyembed"
version = "0.3.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
byteorder = "1"
jemalloc-sys = { version = "0.3", optional = true }
lazy_static = "1.3"
libc = "0.2"
uuid = { version = "0.7", features = ["v4"] }

[dependencies.python3-sys]
git = "https://github.com/indygreg/PyOxidizer.git"
tag = "v0.3.0"

[dependencies.cpython]
git = "https://github.com/indygreg/PyOxidizer.git"
tag = "v0.3.0"
features = ["link-mode-unresolved-static", "python3-sys", "no-auto-initialize"]

[features]
default = []
jemalloc = ["jemalloc-sys"]
